# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import authRouter from "./auth";
+import accountsRouter from "./accounts";
 
 const router: IRouter = Router();
 
+router.use(authRouter);
 router.use(healthRouter);
+router.use(accountsRouter);
 
 export default router;
